--- a/module-5-assignment/module-5-assignment.csproj
+++ b/module-5-assignment/module-5-assignment.csproj
@@ -41,8 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Course.cs" />
+    <Compile Include="Degree.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="Teacher.cs" />
     <Compile Include="UniversityInfoUsingClasses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UProgram.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
