Renamed module-5-assignment project and driver file class

--- a/module-5-assignment/module-5-and-6-assignment.csproj
+++ b/module-5-assignment/module-5-and-6-assignment.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Degree.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Teacher.cs" />
-    <Compile Include="UniversityInfoUsingClasses.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UProgram.cs" />
   </ItemGroup>
